2007-01-02	Alexis Sukrieh	<sukria@backup-manager.org>

	* doc/user-guide.sgml, doc/user-guide.txt
	  + More precise documentation about how to use a zero-TTL for local
	  purging with a different one for remote ones.
	  (closes: #144)

2007-01-02	Alexis Sukrieh	<sukria@backup-manager.org>

	* lib/backup-methods.sh
	  + Fix the security vulnerability about passing MySQL client password
	  through the commandline. Using ~/.my.cnf instead.
	  (closes: #146)

2006-12-29	Alexis Sukrieh	<sukria@backup-manager.org>

	* doc/user-guide.sgml, doc/user-guide.txt
	  + New section about the encryption using GPG.
	  (closes: #132)

2006-12-29	Alexis Sukrieh	<sukria@backup-manager.org>

	* lib/sanitize.sh
	  + Make sure BM_ENCRYPTION_RECIPIENT is defined when BM_ENCRYPTION_METHOD
	  is set to gpg.
	* lib/backup-methods.sh
	  + Handle gently encryption when building meta commands.
	  (closes: #135)
	  + The code of the gzip and the bzip2 compressors have been merged.
	  Less code, less bugs Luke.

2006-12-11  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/files.sh
	  + change a call to mktemp so it's compliant with old versions (mktemp
	  <path>).

2006-10-23  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager:
	  + Renamed the trap callback "stop_me()" to "clean_exit()"; more approriate name.
	* lib/dialog.sh:
	  + Moved stop_me() to lib/backup-methods.sh - clean_exit()
	* lib/backup-methods.sh:
	  + Handles smartly interrupted builds (remove any incomplete archive and
	  friends if the build process has not been correctly finished).
	* Messages updates.

2006-10-20  Alexis Sukrieh  <sukria@backup-manager.org>

	* Makefile:
	  + Don't build the docs by default anymore, the debiandoc tools may not
	  be there.
	  (close #134)

2006-10-20  Alexis Sukrieh  <sukria@backup-manager.org>

	* Copyright headers and debugging messages
	  - lib/backup-methods.sh
	  - lib/dialog.sh
	  - lib/files.sh
	  - lib/md5sum.sh
	  - lib/sanitize.sh